# Aircrash

./: CMakeLists.txt  README.md  main.cpp
dll/GLC/: GLC.cpp
include/: GLC.h  shader.h  sprite.h  stb_image.h  texture.h  tools.h
include/glad/: glad.h
src/: fs.glsl  glad.cpp  shader.cpp  sprite.cpp  texture.cpp  tools.cpp  vs.glsl
